--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,12 @@ dependencies {
 
     // Validate
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
+    implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.1'
+
+    // https://mvnrepository.com/artifact/com.google.firebase/firebase-admin
+    implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.1.0'
 }
 
 tasks.named('test') {
